Streamline UX consistency Centralized updates on search selection Made search select text rather than delete it Search selection consistently moves text to top of history list Changed history list to LinkedList